src/containers/Assets/index.scss
@import "../../assets/scss/variables.scss";

.assets-section {
  .assets-head {
    background: $background-light;
    padding: 15px 25px;
    border-radius: $base-border-radius;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: 1rem;
    box-shadow: $box-shadow-inner-light;
    color: $text-color-dark2;

    .dark-mode & {
      background: $background-dark1;
      border: 1px solid $border-dark;
      box-shadow: none;
      color: $white;
    }

    @media screen and (max-width: 540px) {
      display: block;
    }

    h2 {
      font-weight: 300;
      margin-bottom: 0;
      font-size: 1.5rem;
      color: $text-color-dark2;
      margin-top: 0;

      .dark-mode & {
        color: $white;
      }
    }

    span {
      color: $text-color-light2;
      margin-right: 10px;
      font-size: 0.9rem;

      .dark-mode & {
        color: white;
      }
    }
  }

  .assets-table {
    tr {
      td {
        .ant-btn-sm {
          padding: 0 15px !important;
        }
      }
    }

    .assets-withicon {
      display: flex;
      align-items: center;

      .assets-icon {
        background: $primary-gradient;
        padding: 1px;
        width: 38px;
        height: 38px;
        border-radius: 38px;
        margin-right: 8px;
        display: flex;
        align-items: center;
        justify-content: center;

        .icon {
          width: 100%;
          height: 100%;
          border-radius: 38px;
          padding: 3px;
          background: $background-light;

          .dark-mode & {
            background: $background-dark1;
          }
        }
      }
    }

    .assets-table {
      .assets-withicon {
        display: flex;
        align-items: center;

        .assets-icon {
          background: $primary-gradient;
          padding: 1px;
          width: 38px;
          height: 38px;
          border-radius: 38px;
          margin-right: 8px;
          display: flex;
          align-items: center;
          justify-content: center;

          .icon {
            width: 100%;
            height: 100%;
            border-radius: 38px;
            padding: 3px;

            .dark-mode & {
              background: $background-dark1;
            }
          }
        }
      }
    }

    .ant-table {
      .ant-table-content {
        table {
          .ant-table-thead {
            tr {
              th {
                font-size: 12px;
              }
            }
          }

          .ant-table-tbody {
            tr {
              td:nth-child(3) {
                text-align: center !important;
              }
            }
          }
        }
      }
    }
  }

  .assets-maxhalf {
    display: inline-flex;
    align-items: center;
    margin-left: 4px;
    cursor: pointer;

    .ant-btn {
      font-size: $font-size-sm - 1;
      border-radius: 1px;
      padding: 1px 0;
      margin-left: 4px;
      line-height: 1;
      text-align: center;
      width: 30px;
      height: 15px;
      border: 0;
      cursor: pointer;

      .dark-mode & {
        background: #132239;
        color: $white;
      }

      &.active {
        .dark-mode & {
          background: $secondary-color;
        }

        span {
          .dark-mode & {
            color: $white;
          }
        }
      }
    }
  }
}

.hyperlink-icon {
  .icon {
    height: 10px;
  }
}

.asset-reload-btn {
  cursor: pointer;

  svg {
    font-size: 14px;
    margin-left: 7px;
  }
}

.assets-search-section {
  text-align: right;
  margin-top: 30px;
  margin-bottom: 10px;
  display: flex;
  align-items: center;
  justify-content: flex-end;

  @media screen and (max-width:576px) {
    flex-direction: column;
    align-items: flex-end;
  }

  .ant-input-affix-wrapper {
    border: 1px solid $border-dark;
    background: none;
    border-radius: 30px;
    margin-left: 25px;
    height: 39px;
    padding: 4px 18px;
    max-width: 260px;

    @media screen and (max-width:576px) {
      margin-top: 1.2rem;
      max-width: 100%;
      margin-left: 0;
    }

    &:hover {
      border-color: $border-light;
    }

    input {
      background: none;
      font-weight: normal;

      .dark-mode & {
        color: $white;
      }

      &::placeholder {
        color: #303950;
        opacity: 1;
        font-weight: 500;
      }
    }

    .ant-input-suffix {
      .icon {
        fill: $border-dark;
      }
    }
  }

}

.asset-ibc-btn {
  font-size: 16px;
  margin-left: 4px;
}

